
Reggie, 17.3.1999:
------------------
- Fixes in tables
- Improved variables

Reggie, 18.3.1999:
------------------
- Implemented saving of different types of variables
- Some fixes in variables

Reggie, 19.3.1999:
------------------
- Fixed saving variables
- Some fixes and improvements in variables
- Using QChar instead of char in the KWString class now => KWord supports Unicode (at least I hope so :-)
- edit->paste gets enabled/disabled according to the clipboard data
- edit->copy/cut gets enabled/disbaled according to the text selection

Reggie, 20.3.1999:
------------------
- Fixes
- Fixed saving variables
- Implemented loading variables

Reggie, 21.3.1999:
------------------
- Copying multiple paragraphs with formats to clipboard works
- Some fixes and improvements in pasting formatted text

Reggie, 22.3.1999:
------------------
- Pasting multiple paragraphs with formats works

Reggie, 23.3.1999:
------------------
- Changed the toolbar pixmap which shows the text color - much nicer now
- Fixes in the GUI
- Started with internals for joining/splitting cells

Reggie, 24.3.1999:
------------------
- Added menu entry for splitting table cells
- Improved Tables:
  - It's possible to ungroup a table (each cell becomes an own frameset - ok,
    they are always own frame sets, but the table manager stops controlling them
    in this case)
  - More internal work for joining/splitting table cells

Reggie, 25.3.1999:
------------------
- More work on joining table cells:
  - Joining in horizontal direction works sort of - but
    some strange things are still going on here ;-)
- Made some menu items functional

Reggie, 26.3.1999:
------------------
- Joining table cells in horizontal direction works quite well now
  (at least it doesn't crash anymore and resizes correctly :-)

Reggie, 27.3.1999:
------------------
- Implemented joining table cells in vertical direction
  (only the auto-resize of vertical joined table cells screws
   up a table a bit - will fix it)